--- a/src/components/HeroText/styles.css
+++ b/src/components/HeroText/styles.css
@@ -128,6 +128,16 @@
   }
 }
 
+@media (min-width: 1201px) and (max-width: 1440px) {
+  .titleTwo {
+    width: 60%;
+    font-size: 5em;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100px;
+  }
+}
+
 
 @media (min-width: 1441px)  {
   .subtitleHero {
