--- a/src/screens/Turist/TuristFour/styles.css
+++ b/src/screens/Turist/TuristFour/styles.css
@@ -1,5 +1,6 @@
 @font-face {
     font-family: "Bebas";
+    src: url("../../../fonts/BebasNeue-Regular.ttf");
   }
 
 .titleTuristFour {
@@ -11,7 +12,8 @@
     font-style: normal;
     font-weight: 400;
     line-height: 100.044%;
-    margin: 0px;
+    margin-top: 40px;
+    margin-bottom: 0px;
 }
 .containerHow {
   display: flex;
@@ -21,32 +23,52 @@
   width: 100%;
   height: 100vh;
   gap: 2em;
-  margin: 20px 0px;
+  margin: 0px;
 }
+
+
+.videoWrapper {
+  position: relative;
+  max-width: 100%;
+  overflow: hidden;
+}
+
+.videoElement {
+  width: auto;
+  height: 700px;
+  display: block;
+}
+
+
+
 
 @media (min-width: 360px) and (max-width: 576px) {
     .titleTuristFour {
-      font-size: 2em;;
+      font-size: 3em;;
     }
     .containerHow {
       gap: 2em;
     }
+    .videoElement {
+      width: auto;
+      height: 500px;
+    }
     .videoWrapper {
       display: flex;
       width: 100%;
+      align-items: center;
+      justify-content: center;
     }
-    .iframe {
-      height: 500px;
-    }
+
 }
 @media (min-width: 577px) and (max-width: 992px) {
   .titleTuristFour {
-    font-size: 3em;
+    font-size: 4em;
   }
 }
 @media (min-width: 993px) and (max-width: 1200px) {
   .titleTuristFour {
-    font-size: 3.5em;
+    font-size: 4em;
   }
 }
 
