--- a/src/components/Card/CardGrag/styles.css
+++ b/src/components/Card/CardGrag/styles.css
@@ -62,9 +62,10 @@
 }
 
 .itemDrag {
+    background: rgba(255, 255, 255, 0.10);
+    backdrop-filter: blur(20px);
     display: inline-block;
-    border-radius: 30px;
-    background: rgb(60, 60, 60);
+    border-radius: 0px 0px 30px 30px;
     background-blend-mode: soft-light, normal;
     box-shadow: 0px -4px 2px 0px rgba(0, 0, 0, 0.05) inset;
     height: 500px;
@@ -121,7 +122,7 @@
         text-align: start;
     }
     .itemDrag {
-        width: 350px;
+        width: 470px;
         height: 500px;
     }
     .containerImgDrag {
@@ -134,6 +135,7 @@
         font-size: 1.4em;
     }
     .subtitleCardDrag {
-        font-size: .9em;
+        font-size: 1em;
+        font-family: 'Poppins-Light';
     }
 }
