--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -38,14 +38,14 @@
     display: flex;
     flex-direction: column;
     gap: 1em;
-    width: 100%;
+    width: auto;
     align-items: center;
 }
 .containerTotal {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
+    width: auto;
 }
 
 .navlink {
@@ -134,7 +134,6 @@
     display: flex;
     padding: 60px;
     justify-content: space-between;
-    gap: 5em;
 }
 .containerFormas {
     width: 100%;
@@ -154,6 +153,9 @@
     font-weight: 400;
     line-height: normal;
 }
+.logoFooter {
+    width: 100%;
+}
 
 
 
@@ -166,26 +168,23 @@
         height: auto;
         display: flex;
         flex-direction: column;
-        gap: 2em;
         padding: 30px 20px;
-    }
-    .columnOneFooter {
-        width: 100%;
     }
     .footer {
         height: auto;
     }
     .containerLogoFooter {
-        width: 100%;
+        width: 90%;
         overflow: hidden;
         align-items: flex-start;
     }
     .logoFooter {
         padding: 0px;
-        width: 150px;
+        width: 70%;
     }
     .footerProduct {
         margin-bottom: 0px;
+        margin-top: 0px;
         width: 100%;
         font-size: .8em;
         text-align: start;
@@ -195,12 +194,14 @@
     }
     .containerTotal {
         flex-direction: column;
+        margin-top: 30px;
+        width: 90%;
     }
     .listResponsive {
         display: flex;
         flex-direction: row;
         align-items: flex-start;
-        justify-content: center;
+        justify-content: space-between;
         gap: 1em;
         width: 100%;
     }
@@ -217,24 +218,19 @@
         margin: 30px 0px;
     }
 }
-@media (min-width: 577px) and (max-width: 992px) {
+@media (min-width: 577px) and (max-width: 993px) {
     .footerOrder {
         width: 80%;
         top: 0px;
         height: auto;
         display: flex;
         flex-direction: column;
-        gap: 2em;
-        padding: 30px 30px;
-    }
-    .columnOneFooter {
-        width: auto;
+        padding: 30px 20px;
     }
     .footer {
         height: auto;
     }
     .containerLogoFooter {
-        width: 100%;
         overflow: hidden;
         align-items: flex-start;
     }
@@ -246,6 +242,7 @@
         margin-bottom: 0px;
         width: 100%;
         font-size: 1.2em;
+        margin-top: 0px;
     }
     .textNavTwo {
         display: none;
@@ -259,9 +256,7 @@
         align-items: flex-start;
         justify-content: space-between;
         width: 100%;
-    }
-    .textNavOne, .textNavThree, .textNavComunidad {
-        font-size: 1em;
+        margin-top: 30px;
     }
     .columnOneFooterRed {
         justify-content: center;
@@ -272,37 +267,47 @@
         margin: 30px 0px;
     }
 }
-
-@media (min-width: 1201px) and (max-width: 1440px) {
-    .logoFooter {
-        width: 300px;
+@media (min-width: 577px) and (max-width: 720px) {
+    .textNavOne, .textNavThree, .textNavComunidad {
+        font-size: 1em;
+    }
+    .containerLogoFooter {
+        width: 90%;
+    }
+    .containerTotal {
+        width: 90%;
     }
 }
-@media (min-width: 993px) and (max-width: 1200px) {
-    .logoFooter {
-        width: 200px;
+
+@media (min-width: 721px) and (max-width: 993px) {
+    .textNavOne, .textNavThree, .textNavComunidad {
+        font-size: 1.2em;
+    }
+    .containerTotal {
+        width: 90%;
+    }
+    .containerLogoFooter {
+        width: 90%;
     }
 }
 
-@media (min-width: 993px)  {
+@media (min-width: 994px) and (max-width: 1200px )  {
     .listResponsive {
         display: flex;
         flex-direction: row;
         align-items: start;
-        justify-content: center;
+        justify-content: space-evenly;
+        width: 100%;
         gap: 2em;
     }
     .footerOrder {
         padding: 40px 60px;
         width: 80%;
+        gap: 3em;
         top: 250px;
-        gap: 10em;
     }
     .lineResponsive {
         display: none;
-    }
-    .columnOneFooter {
-        width: 50%;
     }
     .columnOneFooterRed {
         justify-content: center;
@@ -315,5 +320,79 @@
     }
     .textNavComunidad {
         text-align: center;
+    }
+}
+@media (min-width: 1201px) and (max-width: 1440px )  {
+    .listResponsive {
+        display: flex;
+        flex-direction: row;
+        align-items: start;
+        justify-content: space-evenly;
+        width: 100%;
+        gap: 2em;
+    }
+    .footerOrder {
+        padding: 40px 60px;
+        width: 80%;
+        gap: 3em;
+        top: 250px;
+    }
+    .lineResponsive {
+        display: none;
+    }
+    .columnOneFooterRed {
+        justify-content: center;
+    }
+    .textNavThree {
+        font-weight: 500;
+    }
+    .containerTotal {
+        align-items: flex-start;
+    }
+    .textNavComunidad {
+        text-align: center;
+    }
+    .listResponsive {
+        gap: 7em;
+    }
+}
+@media (min-width: 1441px)   {
+    .listResponsive {
+        display: flex;
+        flex-direction: row;
+        align-items: start;
+        justify-content: space-evenly;
+        width: 100%;
+        gap: 2em;
+    }
+    .footerOrder {
+        padding: 40px 60px;
+        width: 80%;
+        gap: 3em;
+        top: 250px;
+    }
+    .lineResponsive {
+        display: none;
+    }
+    .columnOneFooterRed {
+        justify-content: center;
+    }
+    .textNavOne {
+        font-size: 1.2em;
+    }
+    .textNavThree {
+        font-weight: 500;
+        font-size: 1.2em;
+        font-family: 'Poppins-Light';
+    }
+    .containerTotal {
+        align-items: flex-start;
+    }
+    .textNavComunidad {
+        text-align: center;
+        font-size: 1.2em;
+    }
+    .listResponsive {
+        gap: 7em;
     }
 }
