--- a/src/components/HeroText/styles.css
+++ b/src/components/HeroText/styles.css
@@ -29,7 +29,7 @@
   text-align: center;
   margin: 0px;
   text-shadow: 0px 4px 134px #000;
-  width: 80%;
+  width: 70%;
   font-size: 6em;
   font-style: normal;
   font-weight: 400;
@@ -128,10 +128,33 @@
   }
 }
 
+@media (min-width: 993px) and (max-width: 1200px) {
+  .titleTwo {
+    width: 60%;
+    font-size: 5em;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100px;
+  }
+  .titleHero {
+    width: 60%;
+    font-size: 5em;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100px;
+  }
+}
 @media (min-width: 1201px) and (max-width: 1440px) {
   .titleTwo {
     width: 60%;
     font-size: 5em;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100px;
+  }
+  .titleHero {
+    width: 60%;
+    font-size: 6em;
     font-style: normal;
     font-weight: 400;
     line-height: 100px;
