--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -92,9 +92,11 @@
     }
     .containerCard {
         padding: 50px 30px;
+        width: 70%;
+
     }
     .textCard {
-        font-family: "Poppins-Regular", sans-serif;
+        font-family: "Poppins-Light", sans-serif;
         font-size: .9em;
         font-weight: 400;
     }
