--- a/src/screens/SectionFive/styles.css
+++ b/src/screens/SectionFive/styles.css
@@ -64,13 +64,19 @@
     justify-content: flex-start;
     width: 100%;
     flex-direction: row;
-
     position: relative;
     overflow-x: scroll;
     overflow-y: hidden;
     white-space: nowrap;
     transition: all 0.2s;
+    cursor: pointer;
+    user-select: none;
 }
+
+.containerDragCardFive::-webkit-scrollbar {
+    display: none; 
+}
+
 
 
 
