--- a/src/screens/SectionSeven/styles.css
+++ b/src/screens/SectionSeven/styles.css
@@ -221,3 +221,11 @@
         justify-content: center;
     }   
 }
+@media (min-width: 1441px) {
+    .containerSecSeven {
+        height: 100vh;
+    }
+    .containerAsk {
+        height: auto;
+    }
+}
