--- a/src/screens/SectionFive/styles.css
+++ b/src/screens/SectionFive/styles.css
@@ -117,6 +117,9 @@
     scroll-snap-type: x mandatory; 
     -webkit-overflow-scrolling: touch; 
 }
+.containerSectionFive {
+    height: auto;
+}
 .containerDragCard > * {
     flex-shrink: 0; 
     scroll-snap-align: start; 
@@ -133,26 +136,34 @@
 }
 }
 
-@media (min-width: 577px)  {
+@media (min-width: 577px) and (max-width: 768px)  {
     .titleFive {
-        font-size: 4em;
+        font-size: 3em;
+        z-index: 9;
         text-align: center;
         width: 90%;
     }
     .containerSectionFive {
-        height: auto;
+        height: 100vh;
     }
 }
 
-@media (min-width: 992px)   {
+@media (min-width: 769px) and (max-width: 992px) {
     .titleFive {
         font-size: 4em;
         text-align: center;
         width: 60%;
     }
 }
+@media (min-width: 993px) and (max-width: 1200px) {
 
-@media (min-width: 1440px) {
+}
+@media (min-width: 1201px) and (max-width: 1440px)  {
+    .containerFive {
+        width: 70%;
+    }
+}
+@media (min-width: 1441px)  {
     .containerFive {
         width: 70%;
     }
