--- a/src/components/Languaje/styles.css
+++ b/src/components/Languaje/styles.css
@@ -38,13 +38,14 @@
 
 .dropdownMenu {
     position: absolute;
-    top: 100%;
+    top: 80%;
     border: none;
     border-radius: 10px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     z-index: 10;
     box-sizing: border-box;
     background: #111111de;
+    padding: 10px;
 }
 
 .containerFlag {
@@ -75,10 +76,18 @@
     .containerLanguage {
         width: 100%;
     }
+    .dropdownMenu {
+        width: auto;
+        top: 90%;
+    }
 }
-
 @media (min-width: 577px) and (max-width: 768px) {
     .containerLanguage {
         width: 100%;
+    }
+}
+@media (min-width: 993px) and (max-width: 1200px) {
+    .dropdownMenu {
+        top: 70%;
     }
 }
