--- a/src/components/NavBar/styles.css
+++ b/src/components/NavBar/styles.css
@@ -8,10 +8,9 @@
 .containerNav {
     position: fixed;
     z-index: 100;
-    padding-top: 20px;
     flex-direction: row;
     display: flex;
-    background: linear-gradient(360deg, rgba(17, 17, 17, 0.00) 15.94%, #111 66.12%);
+    background: linear-gradient(360deg, rgba(17, 17, 17, 0) 15.94%, #111111e5 66.12%);
     width: 100%;
 }
 
@@ -37,8 +36,8 @@
         flex-direction: row;
         align-items: center;
         justify-content: space-between;
+        padding-top: 10px;
         width: 100%;
-        background: linear-gradient(360deg, rgba(17, 17, 17, 0.00) 15.94%, #11111187 66.12%);
     }
 }
 
@@ -57,7 +56,18 @@
         width: 100%;
     }
 }
-@media (min-width: 1200px) and (max-width: 1440px) {
+
+@media (min-width: 769px) and (max-width: 992px) {
+    .logo {
+        width: 70%;
+    }
+}
+@media (min-width: 993px) and (max-width: 1200px) {
+    .logo {
+        width: 80%;
+    }
+}
+@media (min-width: 1201px) and (max-width: 1440px) {
     .logo {
         width: 60%;
     }
