--- a/src/components/Switch/styles.css
+++ b/src/components/Switch/styles.css
@@ -32,7 +32,7 @@
     }
     .containerSwitch {
         position: absolute !important;
-        top: 90px;
+        top: 70px;
     }
 }
 @media (min-width: 577px) and (max-width: 768px) {
@@ -44,6 +44,23 @@
     }
     .containerSwitch {
         position: absolute;
-        top: 90px;
+        top: 70px;
+    }
+}
+@media (min-width: 769px) and (max-width: 992px) {
+    .switch {
+        width: auto;
+    }
+    .empresa, .turista {
+        font-size: 0.8em;
+    }
+    .containerSwitch {
+        position: absolute;
+        top: 100px;
+    }
+}
+@media (min-width: 993px) and (max-width: 1200px) {
+    .turista, .empresa {
+        font-size: .9em;
     }
 }
