--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -14,6 +14,27 @@
     src: url("../../fonts/Poppins/Poppins-SemiBold.ttf");
     src: url("../../fonts/Poppins/Poppins-Thin.ttf");
   }
+
+  .containerTextImportant {
+    display: flex;
+    align-items: center;
+    z-index: 9;
+    position: relative;
+    top: 400px;
+    justify-content: center;
+    width: 100%;
+  }
+  .containerImportant {
+    width: 85%;
+  }
+  .textImportant {
+    color: #BEBEBE;
+    font-family: 'Poppins-Light';
+    font-size: .8em;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
 .containerFooter {
     display: flex;
     align-items: center;
