cambios slogan footer

--- a/src/screens/SectionSeven/styles.css
+++ b/src/screens/SectionSeven/styles.css
@@ -27,7 +27,7 @@
     align-items: center;
     justify-content: flex-start;
     width: 100%;
-    height: 100vh;
+    height: auto;
 }
 .ask {
     display: flex;
