--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -125,7 +125,7 @@
 
 .footer {
     width: 100%;
-    height: 200px;
+    height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -241,6 +241,9 @@
         border: 1px solid white;
         margin: 30px 0px;
     }
+    .containerTextImportant {
+        top: 50px;
+    }
 }
 @media (min-width: 577px) and (max-width: 993px) {
     .footerOrder {
@@ -290,6 +293,9 @@
         border: 1px solid white;
         margin: 30px 0px;
     }
+    .containerTextImportant {
+        top: 40px;
+    }
 }
 @media (min-width: 577px) and (max-width: 720px) {
     .textNavOne, .textNavThree, .textNavComunidad {
@@ -312,6 +318,9 @@
     }
     .containerLogoFooter {
         width: 90%;
+    }
+    .containerTextImportant {
+        top: 150px;
     }
 }
 
@@ -344,6 +353,9 @@
     }
     .textNavComunidad {
         text-align: center;
+    }
+    .containerTextImportant {
+        top: 350px;
     }
 }
 @media (min-width: 1201px) and (max-width: 1440px )  {
@@ -378,6 +390,9 @@
     }
     .listResponsive {
         gap: 7em;
+    }
+    .containerTextImportant {
+        top: 350px;
     }
 }
 @media (min-width: 1441px)   {
@@ -421,4 +436,8 @@
     .listResponsive {
         gap: 7em;
     }
+    .containerTextImportant {
+        top: 450px;
+    }
+    
 }
