--- a/src/components/Slogan/styles.css
+++ b/src/components/Slogan/styles.css
@@ -1,6 +1,7 @@
 .sloganContainer {
     display: flex;
     width: 100%;
+    height: 500px;
     align-items: center;
     justify-content: center;
     flex-direction: column;
