--- a/src/screens/Turist/TuristSix/styles.css
+++ b/src/screens/Turist/TuristSix/styles.css
@@ -18,9 +18,24 @@
   align-items: center;
   justify-content: center;
 }
-.fondo {
-  position: absolute;
+
+.containerTitleSix {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
+
+.titleTuristSix {
+  color: #fff;
+  text-align: center;
+  text-shadow: 0px 4px 134px #000;
+  font-family: "Poppins", sans-serif;
+  font-size: 5em;
+  font-weight: 500;
+  line-height: 110%;
+}
+
 .containerButtonSix {
   display: flex;
   flex-direction: row;
@@ -34,118 +49,102 @@
   gap: 1em;
 }
 
-
 .containerButtonSix button {
   flex: 0 0 auto;
   user-select: none;
 }
-.containerTitleSix {
+
+.sliderContainer {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
 }
-.titleTuristSix {
-  color: #fff;
-  text-align: center;
-  text-shadow: 0px 4px 134px #000;
-  font-family: "Poppins", sans-serif;
-  font-size: 5em;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 110%;
+
+.arrowButton {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  z-index: 1;
 }
+
+.arrowButton.left {
+  position: absolute;
+  left: 10px;
+}
+
+.arrowButton.right {
+  position: absolute;
+  right: 10px;
+}
+
 .containerFoodSix {
   width: 100%;
   height: auto;
   overflow: hidden;
+  display: flex;
   align-items: center;
   justify-content: center;
-  display: flex;
   position: relative;
 }
+
 .cardContainer {
   display: flex;
-  overflow-x: auto;
   align-items: center;
   justify-content: center;
   width: 70%;
-  margin: 30px 0px;
+  margin: 30px 0;
+  overflow-x: auto;
 }
-
-
 
 @media (min-width: 360px) and (max-width: 576px) {
   .containerTitleSix {
     width: 90%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
   }
-}
-@media (min-width: 577px) and (max-width: 1200px) {
-  .containerTitleSix {
-    width: 70%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-}
-@media (min-width: 360px) and (max-width: 768px) {
-  .containerSectionSixTu {
-    margin-top: 50px;
-  }
-  .containerButtonSix {
-    gap: 1em;
-    margin: 10px 0px 40px 0px;
-  }
+
   .titleTuristSix {
     width: 90%;
     font-size: 2em;
   }
+
   .cardContainer {
     width: 90%;
-    display: flex;
-    overflow-x: auto;
-    align-items: center;
     flex-direction: column;
   }
+
   .cardContainer > * {
-    margin-right: 0px;
+    margin-right: 0;
     height: 400px;
     justify-content: flex-start;
   }
 }
 
-@media (min-width: 769px) and (max-width: 992px) {
-  .cardContainer {
-    display: flex;
-    overflow-x: auto;
-    align-items: center;
-    justify-content: center;
+@media (min-width: 577px) and (max-width: 1200px) {
+  .containerTitleSix {
+    width: 70%;
   }
+
   .titleTuristSix {
     font-size: 3em;
   }
 }
-@media (min-width: 993px) and (max-width: 1200px) {
-  .containerFoodSix {
-    height: 750px;
-  }
-  .cardContainer {
-    width: 100%;
-  }
-}
-@media (min-width: 1201px) and (max-width: 1440px)  {
+
+@media (min-width: 1201px) and (max-width: 1440px) {
   .containerTitleSix {
-    width: 70%;
+    width: 40%;
+  }
+
+  .titleTuristSix {
+    font-size: 4em;
   }
 }
 
-@media (min-width: 1441px)  {
+@media (min-width: 1441px) {
   .containerTitleSix {
     width: 50%;
   }
+
   .containerButtonSix {
     user-select: none;
   }
