--- a/src/components/buttonTurist/styles.css
+++ b/src/components/buttonTurist/styles.css
@@ -15,17 +15,20 @@
     border-radius: 160px;
     border: 1px solid #FFF;
     background-color: #111;
-    width: 250px;
-    height: 60px;
     cursor: pointer;
-
     color: #FFF;
     text-align: center;
     font-family: "Poppins-Regular", sans-serif;
-    font-size: 1.4em;
     font-style: normal;
     font-weight: 400;
     margin: 0px;
+
+    font-size: 1.2em;
+    width: auto;
+    padding: 15px 30px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
 }
 
 .btnTuristOne:hover {
@@ -53,6 +56,10 @@
 @media (min-width: 1200px) {
     .btnTuristOne {
         font-size: 1.2em;
-        width: 230px;
+        width: auto;
+        padding: 15px 30px;
+        align-items: center;
+        justify-content: center;
+        display: flex;
     }
 }
