--- a/src/screens/Turist/TuristFive/styles.css
+++ b/src/screens/Turist/TuristFive/styles.css
@@ -17,7 +17,12 @@
     align-items: center;
     justify-content: center;
 }
-
+.containerCarouselTurist {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
 .titleTuristFive {
     color:#FFF;
     text-align: center;
@@ -34,7 +39,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    width: 100%;
+    width: 85%;
     flex-direction: row;
 
     position: relative;
@@ -42,7 +47,8 @@
     overflow-y: hidden;
     white-space: nowrap;
     user-select: none;
-    cursor: pointer;
+    transition: all 0.2s;
+    cursor: grab;
 }
 .containerDragFive::-webkit-scrollbar {
     display: none; 
