--- a/src/screens/SectionSix/styles.css
+++ b/src/screens/SectionSix/styles.css
@@ -180,7 +180,7 @@
 }
 @media (min-width: 993px) and (max-width: 1200px) {
     .titleSectionSix {
-     font-size: 4em;
+        font-size: 3.5em;
     }
     .sectionSix {
         flex-direction: column-reverse;
@@ -194,6 +194,12 @@
     .containerTextSix {
         padding: 0px;
         width: 100%;
+    }
+    .containerVideosSix {
+        width: 90%;
+    }
+    .videoGif {
+        width: 750px;
     }
 } 
 @media (min-width: 1201px) and (max-width: 1440px) {
